test/field/undefined.lox
struct Foo {}
var foo = Foo()

foo.bar // error: instance dosen't have field bar
